--- a/src/RPN_CLib/RPN_CLib.vcxproj.filters
+++ b/src/RPN_CLib/RPN_CLib.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="RPNProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatchUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OperationConvertor.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RPNProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MatchUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
