--- a/src/RPN_CLib/RPN_CLib.vcxproj.filters
+++ b/src/RPN_CLib/RPN_CLib.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="RPNOperandType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="OperationConvertor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -57,11 +54,11 @@
     <ClInclude Include="MatchUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RPN_Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OperationConvertor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -84,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MatchUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RPN_Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
